tdf#112447: connect all objects

- fixes regression from 575e222a1742918be052f2b716ddf57ce0008404

Change-Id: I686ce41c87e5b421e0382658404cf7bb153a4812